# distributed

./: .gitignore  README.md  deploy_ex2_moodle.sh  devops.sh  large_devops.sh
dsassignment01/: README.md  README.txt  export.sh
dsassignment01/public-tests/: Cargo.toml  system_main.rs
dsassignment01/public-tests/tests/: boot_restore.rs  executors_advanced.rs  store_restore_pending_delivered.rs  stubborn_advanced.rs  whole_system.rs
dsassignment01/solution/: Cargo.toml  TODO.md  domain.rs  lib.rs
dsassignment02/: .gitignore  README.md  description.md  mount_driver.sh  qemu.sh
dsassignment02/driver/: .gitignore  atomic_disc_driver.c  sample_insmod.sh
dsassignment02/public-tests/: Cargo.toml  README.md  client_read.bytes  client_write.bytes
dsassignment02/public-tests/tests/: atomic_register_corectness.rs  atomic_register_correctness.rs  client_msg_serial.rs  client_response.rs  multiple_nodes.rs  multiple_nodes.rs.needs_additional_deps  recovery.rs  sectors_manager.rs  storage.rs  stress.rs  system.rs  transfer_system.rs
dsassignment02/solution/: Cargo.toml  client_read.bytes.SEND
dsassignment02/solution/src/: atomic_register.rs  domain.rs  lib.rs  register_client.rs  sectors_manager.rs  storage.rs  transfer.rs  utils.rs
dslab01/: Cargo.toml  README.md  fib.rs  main.rs
dslab01/examples/: homework_presentation.rs
dslab01/mb385162/: solution.rs
dslab02/: Cargo.toml  README.md  main.rs  public_test.rs  solution.rs
dslab02/examples/: closures.rs  lol  lol.rs  memory_management  memory_management.rs  shared_memory_concurrency  shared_memory_concurrency.rs  threads.rs  traits  traits.rs
dslab03/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab03/examples/: crossbeam.rs  tennis.rs
dslab04/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab04/examples/: low_level_crypto.rs  rustls.rs
dslab04/examples/tcp-communication/: client.rs  main.rs  server.rs
dslab04/examples/udp-communication/: client.rs  main.rs  server.rs
dslab05/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab05/examples/: advanced_traits.rs  generics.rs  lifetime.rs  log.rs  traits_limitations.rs  uuid.rs
dslab06/: Cargo.toml  blkdev.c
dslab06/examples/buffer_device/: Makefile  buffer_device.c  main.rs
dslab06/examples/hello_module/: hello_module.c
dslab07/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab07/examples/: actix_base.rs  actix_rt.rs  actix_stream.rs  asynchronous.rs  bincode.rs
dslab08/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab09/: Cargo.toml  drivers_in_rust.md  main.rs
dslab09/examples/: async_channel.rs  async_trait.rs  futures.rs  tokio.rs  unsafe.rs
dslab09/examples/rust_ram_disk_driver/: Cargo.toml  Kbuild  blkdev.rs  macro_wrapper.c  more_bindings.rs  ram_disk.rs
dslab10/: main.rs  public_test.rs  solution.rs
dslab11/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab12/: Cargo.toml  main.rs  public_test.rs  raft.rs  solution.rs
