[package]
name = "lab-01"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For students:
# Do not worry about this section, you can remove it safely
[dev-dependencies]
ntest = "0.7"

[[bin]]
name = "lab01"
path = "main.rs"
