[package]
name = "lab-05"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ntest = "0.7"
uuid = { version = "0.8", features = ["v4"] }
log = { version = "0.4" }
simplelog = "0.8"

[[bin]]
name = "lab05"
path = "main.rs"
