[package]
name = "lab-09"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
actix = "0.10"
actix-rt = "1.1"
log = "*"
env_logger = "0.7"
async-channel = "1.4"

[dev-dependencies]
ntest = "0.7"

[[bin]]
name = "lab09"
path = "main.rs"
