[package]
name = "lab-10"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
async-channel = "1.4"
futures = "0.3"
tempfile = "3.1"
async-trait = "0.1"

[[bin]]
name = "lab10"
path = "main.rs"
