[package]
name = "lab-06"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-kernel-module = { path = "linux-kernel-module-rust" }

[lib]
name = "ramdisk"
crate-type = ["staticlib"]
path = "ram_disk.rs"
